# SimpleRestaurantApi-Client

./: Cargo.toml  README.md
src/: generators.rs  main.rs  mod.rs  random.rs  requests.rs
