[package]
name = "restaurant_client"
version = "0.1.0"
edition = "2021"
authors = ["AlexRoodo"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "^0.8"
serde = { version = "^1.0", features = ["derive"] }
tokio = { version = "^1", features = ["full"] }
reqwest = { version = "^0.11", features = ["json", "blocking"] }
threadpool = "^1"
strum = "^0.25"
strum_macros = "^0.25"
